feat: add prod config and deploy

--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "private": true,
+  "homepage": "http://sannnao.github.io/react-carousel",
   "scripts": {
-    "start": "webpack serve",
-    "build": "webpack"
+    "start": "webpack serve --env development",
+    "build": "webpack --env production",
+    "deploy": "gh-pages -d dist"
   },
-  "author": "",
+  "author": "Alexander Piskun",
   "license": "ISC",
   "devDependencies": {
     "@babel/cli": "^7.12.1",
@@ -19,6 +21,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.1",
     "file-loader": "^6.2.0",
+    "gh-pages": "^3.1.0",
     "html-webpack-plugin": "^4.5.0",
     "react-refresh": "^0.9.0",
     "style-loader": "^2.0.0",
